--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,19 @@
-    
+* {
+  font-family: monospace;
+}
+.container {
+  display: grid;
+  border: black 1px solid;
+  height: 100vh;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr 1fr;
+}  
 .board {
     display: grid;
     height: 500px;
     width: 500px;
+    grid-area: 1 / 2 / 3 / 3;
+    place-self: center;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     grid-auto-flow: row;
@@ -11,5 +22,51 @@
     padding: 2px;
 
   }
+
+  .sidebar {
+    display: grid;
+    grid-area: 1 / 1 / 3 / 2;
+    grid-template: repeat(5, 1fr) / 1fr;
+
+  }
+
+  .turn {
+    grid-area: 1 / 1 / 2 / 2;
+    place-self: center;
+    font-size: 28px;
+    
+  }
+
+  .player-one {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+
+  .player-two {
+    grid-area: 3 / 1 / 4 / 2;
+  }
   
+  label {
+   align-self: start;
+   justify-self: center;
+   font-size: 20px;
+    
+  }
+  input {
+    place-self: center;
+    border: black solid 1px;
+    height: 30px;
+    padding: 10px;
+    width: 180px;
+    border-radius: 8px;
+  }
+
+submit {
+  grid-area: 4 / 1 / 5 / 2;
+  place-self: center;
+  border: solid 1px black;
+  padding: 10px;
+  width: 150px;
+  border-radius: 8px;
+  text-align: center;
+}
 
