--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,13 @@
   border: black 1px solid;
   height: 100vh;
   grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: .15fr 1fr;
 }  
 .board {
     display: none;
     height: 500px;
     width: 500px;
-    grid-area: 1 / 2 / 3 / 3;
+    grid-area: 2 / 2 / 3 / 3;
     place-self: center;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
@@ -32,7 +32,7 @@
 
   .turn {
     display: none;
-    grid-area: 1 / 1 / 2 / 2;
+    grid-area: 1 / 2 / 2 / 3;
     place-self: center;
     font-size: 28px;
     
