--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
   height: 100vh;
   grid-template-columns: 1fr 2fr;
   grid-template-rows: .15fr 1fr;
+  z-index: 0;
 }  
 .board {
     display: none;
@@ -30,21 +31,22 @@
 
   }
 
-  .turn {
+
+.result-display {
     display: none;
-    grid-area: 1 / 2 / 2 / 3;
+    grid-area: 1 / 1 / 2 / 3;
     place-self: center;
     font-size: 28px;
-    
-  }
+}
 
   .form {
     display: grid;
+    grid-template: repeat(5, 1fr) / 1fr;
     grid-area: 1 / 1 / 6 / 2;
   }
 
   #player-one-label {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-area: 1 / 1 / 2 / 2;
   }
 
   #player-one-input {
@@ -56,32 +58,45 @@
   }
 
   #player-two-input {
-    grid-area: 3 / 1 / 4 / 2;
+    grid-area: 4 / 1 / 5 / 2;
   }
   
   label {
-   align-self: start;
-   justify-self: center;
+   place-self: center;
    font-size: 20px;
     
   }
   input {
-    place-self: center;
+    align-self: start;
+    justify-self: center;
     border: black solid 1px;
     height: 30px;
     padding: 20px;
     width: 300px;
     border-radius: 8px;
+    border-color: #315659;
   }
 
 #play-button {
-  grid-area: 4 / 1 / 5 / 2;
-  place-self: center;
+  grid-area: 5 / 1 / 6 / 2;
+  align-self: start;
+  justify-self: center;
   border: solid 1px black;
   padding: 20px;
-  width: 250px;
+  width: 220px;
   border-radius: 20px;
   text-align: center;
-  font-size: 24px;
+  font-size: 18px;
+  background-color: #315659;
+  color: white;
 }
 
+prompt {
+  display: absolute;
+  grid-area: 1 / 3 / 1 / 3;
+  height: 500px;
+  width: 500px;
+  place-self: center;
+  z-index: 1;
+
+}
