--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@
   
   label {
    place-self: center;
-   font-size: 20px;
+   font-size: 28px;
     
   }
   input {
@@ -91,12 +91,16 @@
   color: white;
 }
 
-prompt {
-  display: absolute;
-  grid-area: 1 / 3 / 1 / 3;
-  height: 500px;
-  width: 500px;
+#play-again-button {
+  grid-area: 1 / 1 / 2 / 2;
   place-self: center;
-  z-index: 1;
-
+  border: solid 1px black;
+  padding: 20px;
+  width: 220px;
+  border-radius: 20px;
+  text-align: center;
+  font-size: 18px;
+  background-color: #315659;
+  color: white;
 }
+
